kustomizations/home-assistant/matter/thread-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openthread
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openthread
      app.kubernetes.io/name: openthread
  serviceName: openthread
  template:
    metadata:
      labels:
        app: openthread
        app.kubernetes.io/name: openthread
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      - name: otbr
        image: openthread/border-router:latest
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 512Mi
        securityContext:
          privileged: true
          runAsUser: 0
          capabilities:
            add:
            - NET_ADMIN
            - SYS_RAWIO
        volumeMounts:
        - name: otbr-data
          mountPath: /data
        - name: rcp
          mountPath: /dev/ttyUSB0
        - name: tun
          mountPath: /dev/net/tun
      nodeSelector:
        kubernetes.io/hostname: catuai
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      volumes:
      - name: otbr-data
        hostPath:
          path: /mnt/openthread
          type: DirectoryOrCreate
      - name: rcp
        hostPath:
          path: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
          type: CharDevice
      - name: tun
        hostPath:
          path: /dev/net/tun
