kustomizations/home-assistant/matter/thread-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openthread
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openthread
  ports:
  - name: api
    port: 8081
    targetPort: 8081
  - name: http
    port: 5580
    targetPort: 5580
