kustomizations/home-assistant/matter/hub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matter-hub
spec:
  rules:
  - host: hub.matter.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: matter-hub
              port:
                number: 8482
